@@ -95,7 +95,7 @@ public class DefaultInputHandler extends InputHandler
 	 */
 	public void addKeyBinding(String keyBinding, String action)
 	{
-		_addKeyBinding(keyBinding,(Object)action);
+		addKeyBinding(keyBinding,(Object)action);
 	} //}}}
 
 	//{{{ addKeyBinding() method
@@ -110,7 +110,65 @@ public class DefaultInputHandler extends InputHandler
 	 */
 	public void addKeyBinding(String keyBinding, EditAction action)
 	{
-		_addKeyBinding(keyBinding,(Object)action);
+		addKeyBinding(keyBinding,(Object)action);
+	} //}}}
+
+	//{{{ addKeyBinding() method
+	/**
+	 * Adds a key binding to this input handler. The key binding is
+	 * a list of white space separated key strokes of the form
+	 * <i>[modifiers+]key</i> where modifier is C for Control, A for Alt,
+	 * or S for Shift, and key is either a character (a-z) or a field
+	 * name in the KeyEvent class prefixed with VK_ (e.g., BACK_SPACE)
+	 * @param keyBinding The key binding
+	 * @param action The action
+	 * @since jEdit 4.3pre1
+	 */
+	public void addKeyBinding(String keyBinding, Object action)
+	{
+		Hashtable current = bindings;
+
+		String prefixStr = null;
+
+		StringTokenizer st = new StringTokenizer(keyBinding);
+		while(st.hasMoreTokens())
+		{
+			String keyCodeStr = st.nextToken();
+			if(prefixStr == null)
+				prefixStr = keyCodeStr;
+			else
+				prefixStr = prefixStr + " " + keyCodeStr;
+
+			KeyEventTranslator.Key keyStroke = KeyEventTranslator.parseKey(keyCodeStr);
+			if(keyStroke == null)
+				return;
+
+			if(st.hasMoreTokens())
+			{
+				Object o = current.get(keyStroke);
+				if(o instanceof Hashtable)
+					current = (Hashtable)o;
+				else
+				{
+					Hashtable hash = new Hashtable();
+					hash.put(PREFIX_STR,prefixStr);
+					o = hash;
+					current.put(keyStroke,o);
+					current = (Hashtable)o;
+				}
+			}
+			else
+				current.put(keyStroke,action);
+		}
+	} //}}}
+
+	//{{{ _addKeyBinding() method
+	/**
+	 * @deprecated Use <code>addKeyBinding()</code> instead.
+	 */
+	public void _addKeyBinding(String keyBinding, Object action)
+	{
+		addKeyBinding(keyBinding,action);
 	} //}}}
 
 	//{{{ removeKeyBinding() method
@@ -212,6 +270,23 @@ public class DefaultInputHandler extends InputHandler
 	{
 		return bindings != currentBindings
 			|| super.isPrefixActive();
+	} //}}}
+
+	//{{{ setBindings() method
+	/**
+	 * Replace the set of key bindings.
+	 * @since jEdit 4.3pre1
+	 */
+	public void setBindings(Hashtable bindings)
+	{
+		this.bindings = this.currentBindings = bindings;
+	} //}}}
+
+	//{{{ setCurrentBindings() method
+	public void setCurrentBindings(Hashtable bindings)
+	{
+		view.getStatus().setMessage((String)bindings.get(PREFIX_STR));
+		currentBindings = bindings;
 	} //}}}
 
 	//{{{ handleKey() method
@@ -426,61 +501,5 @@ public class DefaultInputHandler extends InputHandler
 
 	private Hashtable bindings;
 	private Hashtable currentBindings;
-
-	//{{{ setCurrentBindings() method
-	private void setCurrentBindings(Hashtable bindings)
-	{
-		view.getStatus().setMessage((String)bindings.get(PREFIX_STR));
-		currentBindings = bindings;
-	} //}}}
-
-	//{{{ _addKeyBinding() method
-	/**
-	 * Adds a key binding to this input handler. The key binding is
-	 * a list of white space separated key strokes of the form
-	 * <i>[modifiers+]key</i> where modifier is C for Control, A for Alt,
-	 * or S for Shift, and key is either a character (a-z) or a field
-	 * name in the KeyEvent class prefixed with VK_ (e.g., BACK_SPACE)
-	 * @param keyBinding The key binding
-	 * @param action The action
-	 */
-	public void _addKeyBinding(String keyBinding, Object action)
-	{
-		Hashtable current = bindings;
-
-		String prefixStr = null;
-
-		StringTokenizer st = new StringTokenizer(keyBinding);
-		while(st.hasMoreTokens())
-		{
-			String keyCodeStr = st.nextToken();
-			if(prefixStr == null)
-				prefixStr = keyCodeStr;
-			else
-				prefixStr = prefixStr + " " + keyCodeStr;
-
-			KeyEventTranslator.Key keyStroke = KeyEventTranslator.parseKey(keyCodeStr);
-			if(keyStroke == null)
-				return;
-
-			if(st.hasMoreTokens())
-			{
-				Object o = current.get(keyStroke);
-				if(o instanceof Hashtable)
-					current = (Hashtable)o;
-				else
-				{
-					Hashtable hash = new Hashtable();
-					hash.put(PREFIX_STR,prefixStr);
-					o = hash;
-					current.put(keyStroke,o);
-					current = (Hashtable)o;
-				}
-			}
-			else
-				current.put(keyStroke,action);
-		}
-	} //}}}
-
 	//}}}
 }
